// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Loader component should render as active when isLoading is true 1`] = `
<Fragment>
  <div
    className="ui dimmer active inverted"
  >
    <div
      className="ui text loader"
    />
  </div>
</Fragment>
`;

exports[`render Loader component should render as inverted when dark is false (inverted = light theme) 1`] = `
<Fragment>
  <div
    className="ui dimmer inverted"
  >
    <div
      className="ui text loader"
    />
  </div>
</Fragment>
`;

exports[`render Loader component should render children correctly 1`] = `
<Fragment>
  <div
    className="ui dimmer inverted"
  >
    <div
      className="ui text loader"
    />
  </div>
  <p>
    JSX Child
  </p>
</Fragment>
`;

exports[`render Loader component should render correctly 1`] = `
<Fragment>
  <div
    className="ui dimmer inverted"
  >
    <div
      className="ui text loader"
    />
  </div>
</Fragment>
`;
